--- a/styles/style.css
+++ b/styles/style.css
@@ -22,28 +22,40 @@
   /*margin: auto;*/
 }
 
+.btn-container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 10px 0;
+}
+
 .payment-btn {
-  display: block;
-  width: 80%;
-  background-color: #e60000;
-  margin: 10px auto;
+  width: 48%;
   padding: 10px 30px;
   color: #fff;
   font-size: 1.5em;
   text-transform: uppercase;
-  border: 1px solid #c60000;
 	border-radius: 4px;
 }
-
-.payment-btn:hover {
-  background-color: #cd0000;
-}
-
 
 .payment-btn:disabled {
   background-color: #cab4b4;
   border-color:  #c6b4b4;
 	cursor: not-allowed !important;
+}
+
+.back-btn {
+	width: 48%;
+  padding: 10px 30px;
+  color: #fff;
+  font-size: 1.5em;
+  text-transform: uppercase;
+	border-radius: 4px;
+	background-color: #e60000;
+}
+
+.back-btn:hover {
+  background-color: #cd0000;
 }
 
 .payment-error {
@@ -52,9 +64,17 @@
 
 
 @media screen and (min-width : 720px) {
-  .payment-btn {
-    width: 50%;
+	.btn-container {
+		justify-content: flex-start;
+	}
+
+  .payment-btn, .back-btn {
+    width: 300px;
   }
+
+	.back-btn {
+		margin-left: 12px;
+	}
 }
 
 
